guestbook/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rollout-vsvc
  annotations:
    argocd.argoproj.io/sync-options: RespectIgnoreDifferences=false
spec:
  hosts:
    - dummy.qal.intuit.sandbox.sandbox.argocd2testapp.mesh
  http:
    - name: primary
      route:
#        - destination:
#            host: ping
#          weight: 100
#        - destination:
#            host: pong
#          weight: 0
    - name: secondary
      route:
        - destination:
            host: argocd2testapp-ping-service
          weight: 100
        - destination:
            host: argocd2testapp-pong-service
          weight: 0
